--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </header>
 
 <div class="container">
-  <img src="https://i.imgur.com/s6Kw6UJ.png" alt="سماعة M10">
+  <img src="product.webp" alt="سماعة M10">
   <h2>سماعة أذن لاسلكية M10</h2>
   <p>سماعات أذن أصلية تعمل باللمس، بلوتوت، مقاومة للماء، مع شاشة LED توضح حالة البطارية.</p>
   <div class="price">السعر: 149 درهم</div>
